package server;

import java.io.File;
import java.io.FileNotFoundException;
import java.io.IOException;
import java.io.InvalidObjectException;

import java.net.ServerSocket;
import java.net.Socket;

import merrimackutil.json.types.JSONArray; 
import merrimackutil.json.types.JSONObject; 

import shared.messages.*;

import java.util.HashMap;
import java.util.Map;
import java.util.List; 
import java.util.ArrayList; 

import java.util.concurrent.ConcurrentHashMap;
/** ConcurrentHashMap
 * thread-safe version of a HashMap (can handle multiple interactions at once)
 */

import java.util.Set; 

import merrimackutil.json.JsonIO;
import shared.Card;

public class ServerConnectionHandler {
    private ServerSocket serverSocket;
    public ConcurrentHashMap<String, ClientHandler> clients = new ConcurrentHashMap<>();
    private UserCredentials userCreds;
    private UserCardsDatabase userCardsDatabase;
    public TradeDatabase tradeDatabase;

    /**
     * 
     * @param port
     * @param userCreds
     * @param userCardsDatabase
     * @param tradeDatabase
     */
    public void start(int port, UserCredentials userCreds, UserCardsDatabase userCardsDatabase, TradeDatabase tradeDatabase) {
        this.userCreds = userCreds;
        this.userCardsDatabase = userCardsDatabase;
        this.tradeDatabase = tradeDatabase;

        try {
            serverSocket = new ServerSocket(port);
            while (true) {
                Socket clientSocket = serverSocket.accept();
                ClientHandler handler = new ClientHandler(clientSocket, this);
                new Thread(handler).start();
            }
        } catch (IOException e) {
            e.printStackTrace();
        }
    }

    /**
     * handles user login
     * @param userCredRequest
     * @return
     */
    public boolean handleLogin(UserCredRequest userCredRequest) {
        if (!(userCreds.checkUser(userCredRequest.getUsername()))) {
            return false;
        }

        if (userCreds.checkPassword(userCredRequest.getUsername(), userCredRequest.getPassword())) {
            return true;
        }

        return false;
    }

    /**
     * handles user registration
     * @param userCredRequest
     * @return
     */
    public boolean handleRegistration(UserCredRequest userCredRequest) {
        if (userCreds.checkUser(userCredRequest.getUsername())) {
            return false;
        }

        userCreds.addUser(userCredRequest.getUsername(), userCredRequest.getPassword());
        try {
            userCardsDatabase.addUser(userCredRequest.getUsername());
        } catch (InvalidObjectException e) {
            System.err.println("Error adding user to database: " + e.getMessage());
            return false;
        }
        return true;
    }

    /**
     * handles trade initiation
     * @param request
     * @return
     */
    public String handleTradeInitiation(TradeInitiateRequest request) {

        System.out.println("DEBUG: Trade initiation from " + request.getUsername() + " to " + request.getRecipientUsername());

        String sender = request.getUsername();
        String recipient = request.getRecipientUsername();
        JSONArray offeredCards = request.getOfferedCards();

        if (!userCreds.checkUser(sender) || !userCreds.checkUser(recipient)) {
            System.out.println("Trade failed: User doesn't exist");
            return null;
        }

        try { 
            // check if any offered cards are already in pending trades 
            Set<String> lockedCards = tradeDatabase.getLockedCardIDs(sender);
            for (int i = 0; i < offeredCards.size(); i++) {
                JSONObject offeredCard = (JSONObject) offeredCards.get(i);
                String cardId = offeredCard.getString("cardID");

                if (lockedCards.contains(cardId)) {
                    System.out.println("Trade failed: Card " + cardId + " is already in a pending trade");
                    return null;
                }
            }

            // verify that the sender owns all cards being offered 
            JSONArray senderCards = userCardsDatabase.getUserCards(sender);
            for (int i = 0; i < offeredCards.size(); i++) {
                JSONObject offeredCard = (JSONObject) offeredCards.get(i);
                boolean cardFound = false;

                for (int j = 0; j < senderCards.size(); j++) {
                    JSONObject userCard = (JSONObject) senderCards.get(j);
                    if (userCard.getString("cardID").equals(offeredCard.getString("cardID"))) {
                        cardFound = true;
                        break;
                    }
                }

                if (!cardFound) {
                    System.out.println("Card not found");
                    return null;
                }
            } 
        } catch (InvalidObjectException e) {
            System.err.println("Error verifying card ownership: " + e.getMessage());
            return null;
        }

        // create the trade
        String tradeId = tradeDatabase.createTrade(sender, recipient, offeredCards);
        TradeLogger.getInstance().logTradeCreation(tradeId, sender, recipient, offeredCards);

        // notify the recipient if their online
        ClientHandler recipientHandler  = clients.get(recipient);
        if (recipientHandler != null) {
            System.out.println("DEBUG: Sending notification to " + recipient);
            TradeOfferNotification notification = new TradeOfferNotification(tradeId, sender, offeredCards, "initial");
            recipientHandler.sendMessage(notification);
        } else {
            System.out.println("DEBUG: Recipient handler is null, cannot send notification");
        }
        return tradeId; 
    }

    /**
     * handle counter offer from recipient 
     * @param request
     * @return
     */
    public boolean handleCounterOffer(CounterOfferRequest request) {
        String tradeId = request.getTradeId();
        String username = request.getUsername();
        JSONArray offeredCards = request.getOfferedCards();

        System.out.println("Processing counteroffer from " + username + " for trade "+ tradeId);

        // get trade details
        JSONObject trade = tradeDatabase.getTrade(tradeId);
        if (trade == null) {
            System.out.println("Counter offer failed: Trade not foundor not pending");
            return false; 
        }

        // check if the trade is still vlaid for conter-offering 
        String status = trade.getString("status");
        if (!"pending".equals(status)) {
            System.out.println("Counter offer failed: Trade is not pending (status: " + status + ")");
        }

        // verify recipient 
        String recipient = trade.getString("recipient");
        if (!recipient.equals(username)) {
            System.out.println("Counter offer failed: user is not recipient");
            return false; 
        }

        // unlock existing locks for the trade before attempting ti lock new cards
        tradeDatabase.unlockCardsForTrade(tradeId); 

        // verufy card ownsership
        try {
            JSONArray userCards = userCardsDatabase.getUserCards(username);
            for (int i = 0; i < offeredCards.size(); i++) {
                JSONObject offeredCard = (JSONObject) offeredCards.get(i);
                boolean cardFound = false;
                for (int j = 0; j < userCards.size(); j++) {
                    JSONObject userCard = (JSONObject) userCards.get(j);
                    if (userCard.getString("cardID").equals(offeredCard.getString("cardID"))) {
                        cardFound = true; 
                        break;
                    }
                }

                if (!cardFound) {
                    System.out.println("Counter offer failed: Card not owned by user");
                    return false; 
                }
            }
        } catch (InvalidObjectException e) {
            System.err.println("Error verifying card ownership: " + e.getMessage());
            return false; 
        }

        // try to lock the offered cards to precvent them from being included in other trades
        if (!tradeDatabase.lockCardsForTrade(offeredCards, tradeId)) {
            System.out.println("Counter offer failed, couldn't lock cards");
            return false;
        }

        // update trade with counter offer
        if (!tradeDatabase.addCounterOffer(tradeId, offeredCards)) {
            System.out.println("Counter offer failed: couldn't lock cards");
            tradeDatabase.unlockCardsForTrade(tradeId); // release locks ifthe trade fails 
            return false; 
        }

        trade.put("timestamo", System.currentTimeMillis());
        tradeDatabase.save();

        // notify initiator of counter offer
        String initiator = trade.getString("initiator");
        ClientHandler initiatorHandler = clients.get(initiator);
        if (initiatorHandler != null) {
            TradeOfferNotification notification = new TradeOfferNotification(tradeId, username, offeredCards, "counterOffer");
            initiatorHandler.sendMessage(notification);
            System.out.println("Counteroffer notification sent to " + initiator);
        } else {
            System.out.println("Initiator " + initiator + " is offline, couldn't notify");
        }

        TradeLogger.getInstance().logTradeCounterOffer(tradeId, initiator, recipient, offeredCards);
        return true;
    }

    /**
     * handle trade confirmation from initiator
     * @param request
     * @return
     */
    public boolean handleTradeConfirmation(TradeConfirmationRequest request) {
        String tradeId = request.getTradeId();
        String username = request.getUsername();
        boolean confirmed = request.isConfirmed();

        JSONObject trade = tradeDatabase.getTrade(tradeId);
        if (trade == null || !"counterOffered".equals(trade.getString("status"))) {
            System.out.println("Confirmation failed: Trade not found or not counter-offered");
            return false; 
        }

        // verify the initiator
        String initiator= trade.getString("initiator");
        if (!initiator.equals(username)) {
            System.out.println("Confirmation failed: User id not the initiator");
            return false; 
        }

        // update trade status 
        tradeDatabase.updateTradeStatus(tradeId, confirmed ? "confirmed" : "rejected");

        String recipient = trade.getString("recipient");

        if (confirmed) {
            // execute the bidirectional trade transaction
            boolean success = executeBidirectionalTrade(tradeId);

            if (!success) {
                tradeDatabase.updateTradeStatus(tradeId, "failed");
                TradeLogger.getInstance().logTradeFailure(tradeId, initiator, recipient, "Failed to execute card exchange");
                return false;
            }
            TradeLogger.getInstance().logTradeCompletion(tradeId, initiator, recipient);
        } else {
            TradeLogger.getInstance().logTradeRejection(tradeId, initiator, recipient, "Initiator rejected the counter offer");
        }

        // notify the recipient of confirmation result
        ClientHandler recipientHandler = clients.get(recipient);
        if (recipientHandler != null) {
            TradeResponse response = new TradeResponse(tradeId, confirmed, username);
            recipientHandler.sendMessage(response);
        }
        return true; 
    }
    
    private synchronized boolean executeBidirectionalTrade(String tradeId) {
        JSONObject trade = tradeDatabase.getTrade(tradeId);
        if (trade == null) {
            return false; 
        }

        String initiator = trade.getString("initiator");
        String recipient = trade.getString("recipient");
        JSONArray initiatorCards = trade.getArray("offeredCards");
        JSONArray recipientCards = trade.getArray("recipientOfferedCards");

        // lock all cards involved in the trade
        if (!tradeDatabase.lockCardsForTrade(initiatorCards, tradeId)) {
            return false;
        }

        if (!tradeDatabase.lockCardsForTrade(recipientCards, tradeId)) {
            tradeDatabase.unlockCardsForTrade(tradeId);
            return false; 
        }

        try { // fingers crossed
            // first, remove cards from both users
            userCardsDatabase.removeCards(initiator, initiatorCards);
            userCardsDatabase.removeCards(recipient, recipientCards);
        
            // add the cards to both users
            userCardsDatabase.addCards(recipient, initiatorCards);
            userCardsDatabase.addCards(initiator, recipientCards);

            return true; 
        } catch (Exception e) {
            System.err.println("Error executing bidirectional trade: " + e.getMessage());
            return false;
        } finally {
            tradeDatabase.unlockCardsForTrade(tradeId);
        }
    }

    /**
     * handles trade response with transaction support 
     * @param response
     * @return
     */
    public boolean handleTradeResponse(TradeResponse response) {
        String tradeId = response.getTradeId();
        boolean accepted = response.isAccepted();

        JSONObject trade = tradeDatabase.getTrade(tradeId);
        if (trade == null) {
            System.out.println("Trade response failed: Trade not found");
            return false;
        }

        // verify that the trade is still pending 
        if (!"pending".equals(trade.getString("status"))) {
            System.out.println("Trade response failed: Trade is no longer pending");
            return false; 
        }

        String initiator = trade.getString("initiator");
        String recipient = trade.getString("recipient");

        // update trade status 
        tradeDatabase.updateTradeStatus(tradeId, accepted ? "accepted" : "rejected");

        // log result
        if (accepted) {
            TradeLogger.getInstance().logTradeAcceptance(tradeId, initiator, recipient);
        } else {
            TradeLogger.getInstance().logTradeRejection(tradeId, initiator, recipient);
        }

        // execute the trade 
        if (accepted) {
            boolean success = executeTradeTransaction(tradeId);
            if  (!success) {
                // if execution failed, update status
                tradeDatabase.updateTradeStatus(tradeId, "failed");
                TradeLogger.getInstance().logTradeFailure(tradeId, initiator, recipient, "Failed to execute card transfer");
                return false; 
            }
        }

        //  notify the initiator of the response
        ClientHandler initiatorHandler = clients.get(initiator);
        if (initiatorHandler != null) {
            initiatorHandler.sendMessage(response);
        }
        return true; 
    }

    public JSONArray handleAvailableUsersRequest(AvailableUsersRequest request) {
        String requestingUser = request.getRequestingUser();
        JSONArray availableUsers = new JSONArray();

        try {
            // get all usernames
            Set<String> allUsernames = userCardsDatabase.getAllUsernames();

            // filter out the requesting user
            for (String username : allUsernames) {
                if (!username.equals(requestingUser)) {
                    JSONObject userObj = new JSONObject();
                    userObj.put("username", username);
                    availableUsers.add(userObj);
                }
            }

            System.out.println("Returning "+  availableUsers.size() + " available users for " + requestingUser);
            return availableUsers;
        } catch (Exception e) {
            System.err.println("Error gettting available users: " + e.getMessage());
            e.printStackTrace();
            return new JSONArray();
        }
    }

    /**
     * 
     * @param packRequest
     * @return
     */
    public JSONArray handlePackRequest(PackRequest packRequest) {
        HashMap<String, Card> cardsMap = new HashMap<>();
        JSONArray cardArray = null;

        try {
            cardArray = JsonIO.readArray(new File("src/server/cardinfo/cards.json"));
        } catch (FileNotFoundException e) {
            System.err.println("cards.json file not found: " + e.getMessage());
            return new JSONArray(); // Return an empty array if the file is missing
        }

        // Populate the cardsMap
        for (int i = 0; i < cardArray.size(); i++) {
            JSONObject card = (JSONObject) cardArray.get(i);
            String cardID = card.getString("cardID");
            String name = card.getString("name");
            int rarity = card.getInt("rarity");
            String imageLink = card.getString("imageLink");
            cardsMap.put(cardID, new Card(cardID, name, rarity, imageLink));
        }

        JSONArray cardPack = new JSONArray();
        int cardCount = packRequest.getCardCount();

        // Randomly select cards
        for (int i = 0; i < cardCount; i++) {
            int randomIndex = (int) (Math.random() * cardsMap.size());
            String cardID = (String) cardsMap.keySet().toArray()[randomIndex];
            Card card = cardsMap.get(cardID);

            if (card != null) {
                JSONObject cardJSON = new JSONObject();
                cardJSON.put("cardID", card.getCardID());
                cardJSON.put("name", card.getName());
                cardJSON.put("rarity", card.getRarity());
                cardJSON.put("imageLink", card.getImage());
                cardPack.add(cardJSON);
            } else {
                System.err.println("Card with ID " + cardID + " is null.");
            }
        }

        // Add the cards to the user's database
        try {
            userCardsDatabase.addCards(packRequest.getUsername(), cardPack);
        } catch (InvalidObjectException e) {
            System.err.println("Error adding cards to database: " + e.getMessage());
        }

        return cardPack;
    }

    /**
     * handles the card transfer with added transaction support 
     * @param tradeId
     */
    private synchronized boolean executeTradeTransaction(String tradeId) {
        return TradeTransactionCoordinator.getInstance().executeTradeTransaction(tradeId, tradeDatabase, userCardsDatabase);
    } 

    /**
     * 
     * @param username
     * @param clientHandler
     */
    public void addClient(String username, ClientHandler clientHandler) {
        clients.put(username, clientHandler);
    }

    /**
     * 
     * @param username
     */
    public void removeClient(String username) {
        clients.remove(username);
    }

    /**
     * handles request to collect cards
     * @param collectionRequest
     * @return
     */
    public JSONArray handleCollectionRequest(CollectionRequest collectionRequest) {
        JSONArray collection = new JSONArray();
        try {
            collection = userCardsDatabase.getUserCards(collectionRequest.getUsername());
        } catch (InvalidObjectException e) {
            System.err.println("Error retrieving user cards: " + e.getMessage());
        }
        return collection;
    }

    /**
     * performs a thorough database integrity check to ensure no card duplicates across users
     * @return
     */
    public boolean validateDatabaseIntegrity() {
        System.out.println("Performing database integrity check...");
    
        // check for duplicate cards
        Map<String, List<String>> cardToOwners = new HashMap<>();
        boolean hasIntegrityIssues = false; 

        try {
            // build a map of card IDs to their owners
            for (String username : userCardsDatabase.getAllUsernames()) {
                JSONArray userCards = userCardsDatabase.getUserCards(username);
            
                for (int i = 0; i < userCards.size(); i++) {
                    JSONObject card = (JSONObject) userCards.get(i);
                    String cardId = card.getString("cardID");

                    if (!cardToOwners.containsKey(cardId)) {
                        cardToOwners.put(cardId, new ArrayList<>());
                    }
                    cardToOwners.get(cardId).add(username);
                }
            } 

            // count total cards
            int totalCards = 0; 
            for (List<String> owners : cardToOwners.values()) {
                totalCards += owners.size();
            }

            int uniqueCards = cardToOwners.size();
            System.out.println("Total cards: " + totalCards + ", Unique cards: " + uniqueCards);

            if (totalCards != uniqueCards) {
                System.err.println("INTEGRITY ERROR: Card count mismatch. There are " + (totalCards - uniqueCards) + " duplicate cards in the system");
            }

            return !hasIntegrityIssues;

        } catch (Exception e) {
            System.err.println("Error validating database: " + e.getMessage());
            return false; 
        }
   }
}
